# solitaire-encryption

./: CHANGELOG.md  README.md  solitaire-encryption.cabal  stack.yaml
app/: Main.hs
src/: Deck.hs  Key.hs  Shuffle.hs  Solitaire.hs
test/: DeckSpec.hs  KeySpec.hs  SolitaireSpec.hs
